--- a/who_we_are.html
+++ b/who_we_are.html
@@ -131,6 +131,34 @@
         .slider:before { position: absolute; content: ""; height: 20px; width: 20px; left: 4px; bottom: 4px; background-color: white; border-radius: 50%; transition: 0.4s; }
         input:checked + .slider { background-color: var(--text-accent); }
         input:checked + .slider:before { transform: translateX(20px); }
+
+        /* Styles for heading interactivity */
+        .section-header h2.gradient-text {
+            position: relative;
+            display: inline-block; /* Ensures proper positioning for pseudo-elements and transforms */
+            cursor: pointer;
+            background-size: 200% auto; /* Required for gradient animation */
+            transition: background-position 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94); /* Smooth gradient shift */
+        }
+
+        .section-header h2.gradient-text::after {
+            content: '';
+            position: absolute;
+            width: 0;
+            height: 2px; /* Thickness of the underline */
+            bottom: -6px; /* Distance from text */
+            left: 0; /* Start underline from the left */
+            background-color: var(--text-accent); /* Use your accent color */
+            transition: width 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94); /* Smooth underline animation */
+        }
+
+        .section-header h2.gradient-text:hover {
+            background-position: -100% center; /* Shift gradient to the other side */
+        }
+
+        .section-header h2.gradient-text:hover::after {
+            width: 100%; /* Expand underline to full width */
+        }
     </style>
 </head>
 <body class="light-mode">
@@ -587,6 +615,32 @@ document.addEventListener('DOMContentLoaded', () => {
                 </div>
             </div>
         `).join('');
+
+        // Add hover animations to tool card logos
+        const toolCards = container.querySelectorAll('.tool-card');
+        toolCards.forEach(card => {
+            const logo = card.querySelector('.tool-logo');
+            if (logo) {
+                card.addEventListener('mouseenter', () => {
+                    gsap.to(logo, { 
+                        scale: 1.15, 
+                        rotate: (Math.random() - 0.5) * 10, // Small random rotation (-5 to 5 deg)
+                        y: -5, 
+                        duration: 0.25, 
+                        ease: 'power1.out' 
+                    });
+                });
+                card.addEventListener('mouseleave', () => {
+                    gsap.to(logo, { 
+                        scale: 1, 
+                        rotate: 0, 
+                        y: 0, 
+                        duration: 0.2, 
+                        ease: 'power1.inOut' 
+                    });
+                });
+            }
+        });
     }
 
     // --- CLIENT-SIDE SEARCH ---
@@ -621,6 +675,22 @@ document.addEventListener('DOMContentLoaded', () => {
                 duration: 1, y: 0, autoAlpha: 1, ease: 'power3.out',
                 scrollTrigger: { trigger: elem, start: 'top 90%', toggleActions: 'play none none reset' },
                 delay: elem.dataset.revealDelay || 0
+            });
+        });
+
+        // New: Animate section headings
+        gsap.utils.toArray('.section-header h2.gradient-text').forEach(heading => {
+            gsap.from(heading, {
+                scrollTrigger: {
+                    trigger: heading,
+                    start: 'top 85%', // When the top of the heading is 85% from the top of the viewport
+                    toggleActions: 'play none none reset'
+                },
+                duration: 0.8,
+                autoAlpha: 0, // Fade in
+                x: -50,         // Slide in from the left
+                skewX: 8,      // Add a slight skew effect during animation
+                ease: 'power2.out'
             });
         });
         
