--- a/who_we_are.html
+++ b/who_we_are.html
@@ -554,6 +554,39 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- Slide 4 -->
+                        <div class="swiper-slide">
+                            <img src="https://placehold.co/600x400/8B5CF6/FFFFFF?text=SmartCity" alt="Abstract representation of SmartCity" class="w-full h-48 object-cover">
+                            <div class="p-6">
+                                <h3 class="text-xl font-bold mb-2">Smart City IoT Platform</h3>
+                                <p class="text-text-secondary text-sm mb-4">Developed a city-wide IoT solution, enhancing urban management and citizen engagement through real-time data.</p>
+                                <div class="testimonial-quote">
+                                    <p class="text-sm">"A visionary project that has set a new standard for urban living."</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Slide 5 -->
+                        <div class="swiper-slide">
+                            <img src="https://placehold.co/600x400/EC4899/FFFFFF?text=HealthSync" alt="Abstract representation of HealthSync" class="w-full h-48 object-cover">
+                            <div class="p-6">
+                                <h3 class="text-xl font-bold mb-2">Telehealth Platform</h3>
+                                <p class="text-text-secondary text-sm mb-4">Created a secure, HIPAA-compliant telehealth solution that connects patients with providers seamlessly.</p>
+                                <div class="testimonial-quote">
+                                    <p class="text-sm">"Their expertise in healthcare technology is unmatched. A true partner in our mission."</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Slide 6 -->
+                        <div class="swiper-slide">
+                            <img src="https://placehold.co/600x400/10B981/FFFFFF?text=EduTech" alt="Abstract representation of EduTech" class="w-full h-48 object-cover">
+                            <div class="p-6">
+                                <h3 class="text-xl font-bold mb-2">Next-Gen Learning Management System</h3>
+                                <p class="text-text-secondary text-sm mb-4">Empowered educational institutions with a scalable, interactive platform that enhances learning experiences.</p>
+                                <div class="testimonial-quote">
+                                    <p class="text-sm">"An innovative solution that has transformed how we deliver education."</p>
+                                </div>
+                            </div>
+                        </div>
                         <!-- Add more slides as needed -->
                     </div>
                     <!-- Add Pagination -->
