--- a/who_we_are.html
+++ b/who_we_are.html
@@ -60,6 +60,10 @@
             -webkit-backdrop-filter: blur(10px);
             -webkit-backdrop-filter: blur(10px);
             -webkit-backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
             backdrop-filter: blur(10px);
         }
         #main-header.scrolled {
@@ -737,10 +741,18 @@
             border-radius: 1.5rem;
             overflow: hidden;
             box-shadow: 0 20px 40px var(--shadow-color);
+            -webkit-backdrop-filter: blur(10px);
             backdrop-filter: blur(10px);
             animation: slideUpFadeIn 1s ease-out;
         }
-
+        .ai-chat-container::before {
+            content: '';
+            position: absolute;
+            top: 0; left: 0; right: 0; bottom: 0;
+            background: linear-gradient(135deg, var(--gradient-start), var(--gradient-mid));
+            opacity: 0.1;
+            z-index: -1;
+        }
         @keyframes slideUpFadeIn {
             from { opacity: 0; transform: translateY(50px); }
             to { opacity: 1; transform: translateY(0); }
