Update AI Assistant API URL with a specific API key for content generation

--- a/who_we_are.html
+++ b/who_we_are.html
@@ -2307,7 +2307,7 @@ function initAIAssistant() {
             // The API key is left as an empty string. The environment will securely
             // provide it at runtime.
             const apiKey = ""; 
-            const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`;
+            const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${AIzaSyCOyiZkk8t7zFtX4zC9G4v66MPJfgjIi84}`;
 
             const payload = {
                 contents: chatHistory,
